--- a/Estilos/mediaquery.css
+++ b/Estilos/mediaquery.css
@@ -9,17 +9,28 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 30vw;
         height: 100%;
     }
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 1.6em;
+    }
+
+    div#formulario > p {
+        font-size: 1em;
     }
 }
 
 @media screen and (min-width: 993px) {
+    body {
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    }
     section#login {
         width: 950px;
     }
@@ -33,5 +44,13 @@
     section#login > div#formulario {
         float: right;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
