--- a/Estilos/mediaquery.css
+++ b/Estilos/mediaquery.css
@@ -6,6 +6,7 @@
     }
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -33,6 +34,7 @@
     }
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
